create modals for characcters in /oiar.html fix up some navigations few other minor fixes

--- a/index.html
+++ b/index.html
@@ -122,11 +122,13 @@
       <section class="cluster">
         <div>
           <p class="analysis">
-            welcome to my autism dump relating to <b>the magnus archives</b> and <b>the magnus protocol!</b> this is mostly for myself, as someone who resents google docs and things of the sort; decided to just code something oriented toward this. i guess it's a little spintrest project. this will slowly build up as i go through and re-listen to/reread the transcripts for the TMA episodes, as well as the TMagP episodes that have been—and continue to—come out.
+            welcome to my autism dump relating to <b>the magnus archives</b> and <b>the magnus protocol!</b> this is mostly for myself, as someone who resents google docs and things of the sort; decided to just code something myself oriented toward what's essentially a little spintrest project. contents of the site will slowly build up as i go through my TMA relisten/transcript reread, as well as the TMagP episodes that have been&#8205;&#8212;and continue to&#8205;&#8212; come out.
           </p>
+            <br>
           <p class="analysis">
-            this site <b>will contain spoilers!</b> this is your one and only warning! <b>turn back now if you just happened to come across this and don't want spoilers to these podcasts!</b>
+            this will be your <u>one and only warning</u> that this site <b>will contain spoilers! turn back now if you just happened to come across this and don't want spoilers to these podcasts!</b>
           </p>
+            <br>
           <p class="analysis">
             <b>lastly,</b> this is <u>not a wiki</u>! i am documenting my thoughts, analyses, and <i>sometimes</i> opinions on the podcast and it's contents here! if you are looking for a wiki, i reccommend going <a href="https://the-magnus-archives.fandom.com/wiki/The_Magnus_Archives_Wikia">here</a> for TMA and <a href="https://themagnusprotocol.miraheze.org/wiki/The_Magnus_Protocol_Wiki">here</a> for TMagP!
           </p>
