--- a/tma/season/4.html
+++ b/tma/season/4.html
@@ -21,7 +21,7 @@
     </section>
 
     <section>
-      <h1></h1>
+      <h1>TMA: Season Four.</h1>
     </section>
     
     <section class="page navbar toggle">
@@ -41,18 +41,19 @@
     </section>
     
     <section>
-      <h6>TMagP</h6>
+      <h6>TMA</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+        <div><a href="../episodes.html" class="title">Episodes</a></div>
+        <div><a href="../characters.html" class="title">Characters</a></div>
+        <div><a href="3.html" class="subtitle">Prior Season</a></div>
+        <div><a href="5.html" class="subtitle">Next Season</a></div>
       </nav>
     </section>
   </aside>
 
   <aside class="navbar bar page small" id="nav-small-p">
     <section>
-        <h6></h6>
+        <h6>TMA: Season Four</h6>
         <nav>
           <div><a href="/" class="title"></a></div>
           <div><a href="/" class="subtitle"></a></div>
@@ -78,17 +79,18 @@
           </nav>
         </section>
         <section>
-          <h6>TMagP</h6>
+          <h6>TMA</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div><a href="../episodes.html" class="title">Episodes</a></div>
+              <div><a href="../characters.html" class="title">Characters</a></div>
+              <div><a href="3.html" class="subtitle">Prior Season</a></div>
+              <div><a href="5.html" class="subtitle">Next Season</a></div>
           </nav>
         </section>
       </aside>
       <aside class="navbar bar big page" id="nav-big-p">
         <section>
-          <h6></h6>
+          <h6>TMA: Season Four</h6>
           <nav>
             <div><a href="/" class="title"></a></div>
             <div><a href="/" class="subtitle"></a></div>
