--- a/tmagp/episodes.html
+++ b/tmagp/episodes.html
@@ -36,15 +36,14 @@
       <nav>
         <div><a href="../../index.html" class="title">Home</a></div>
         <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="index.html" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+        <div class="title">Episodes</div>
+        <div><a href="characters.html" class="title">Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -71,17 +70,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+            <div><a href="../index.html" class="title">Home</a></div>
+            <div><a href="../tma/index.html" class="subtitle">Magnus Archives</a></div>
+            <div><a href="index.html" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div class="title">Episodes</div>
+              <div><a href="characters.html" class="title">Characters</a></div>
           </nav>
         </section>
       </aside>
@@ -117,6 +115,6 @@
     </article>
   </main>
 
-  <script src="../../js/scripts.js"></script>
+  <script src="../js/scripts.js"></script>
 </body>
 </html>
