--- a/tmagp/index.html
+++ b/tmagp/index.html
@@ -34,17 +34,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../index.html" class="title">Home</a></div>
+        <div><a href="../tma/index.html" class="subtitle">Magnus Archives</a></div>
+        <div class="subtitle">Magnus Protocol</div>
       </nav>
     </section>
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+        <div><a href="episodes.html" class="title">Episodes</a></div>
+        <div><a href="characters.html" class="title">Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -76,17 +75,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+            <div><a href="../index.html" class="title">Home</a></div>
+            <div><a href="../tma/index.html" class="subtitle">Magnus Archives</a></div>
+            <div class="subtitle">Magnus Protocol</div>
           </nav>
         </section>
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div><a href="episodes.html" class="title">Episodes</a></div>
+              <div><a href="characters.html" class="title">Characters</a></div>
           </nav>
         </section>
       </aside>
@@ -118,10 +116,15 @@
       <section class="cluster">
         <div>
           <p class="analysis">
-            this is the landing page relating to <b>the magnus protocol.</b> in the navigation, one can find links to the <b>episode, character,</b> and <b>entity</b> pages, as well as more <i>specific</i> pages for all the seasons and groups of characters. 
+            <b>the Magnus Protocol is a podcast</b> distributed by Rusty Quill and licensed under a Creative Commons Attribution Non-Commercial Sharealike 4.0 International License.
           </p>
+            <br>
           <p class="analysis">
-            while we don't know the status of <a href="../tma/entity.html">the Entities</a>, i may refer to them in my analyses of the episodes; i will at least point out the presence of their <i>general themes</i> within episodes, and refer to them by name. this is due to change once we learn more about this reality and how the Entities work within it. 
+            this is the hub-page relating for all my thoughts and analyses on <b>the magnus protocol.</b>
+          </p>
+            <br>
+          <p class="analysis">
+            while we don't know the status of <a href="../tma/fears.html">the Entities</a>, i may refer to them in my analyses of the episodes; i will at least point out the presence of their <i>general themes</i> within episodes and, at times, refer to them by name. <b>this is due to change once we learn more about this reality and how the Fears work within it, if at all;</b> nonetheless, unless there's new thematic elements and different Entities, in whatever forms, i will refer back to the ones from Archives.
           </p>
         </div>
       </section>
@@ -131,6 +134,6 @@
     </article>
   </main>
 
-  <script src="../../js/scripts.js"></script>
+  <script src="../js/scripts.js"></script>
 </body>
 </html>
