--- a/tmagp/season/1.html
+++ b/tmagp/season/1.html
@@ -42,9 +42,9 @@
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Season</a></div>
+        <div><a href="../episodes.html" class="title">Episodes</a></div>
+        <div><a href="../characters.html" class="title">Characters</a></div>
+        <div class="subtitle">Next Season</div>
       </nav>
     </section>
   </aside>
@@ -79,9 +79,9 @@
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div><a href="../episodes.html" class="title">Episodes</a></div>
+              <div><a href="../characters.html" class="title">Characters</a></div>
+              <div class="subtitle">Next Season</div>
           </nav>
         </section>
       </aside>
