--- a/tma/ep/001.html
+++ b/tma/ep/001.html
@@ -44,7 +44,7 @@
       <nav>
         <div><a href="tma/episodes.html" class="title">Episodes</a></div>
         <div><a href="tma/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+        <div><a href="../002.html" class="subtitle">Next Episode</a></div>
       </nav>
     </section>
     <section class="legend">
@@ -91,11 +91,11 @@
           </nav>
         </section>
         <section>
-          <h6>TMagP</h6>
+          <h6>TMA</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div><a href="../episodes.html" class="title">Episodes</a></div>
+              <div><a href="../characters.html" class="title">Characters</a></div>
+              <div><a href="../002.html" class="subtitle">Next Episode</a></div>
           </nav>
         </section>
       </aside>
