--- a/tma/episodes.html
+++ b/tma/episodes.html
@@ -42,7 +42,7 @@
       </nav>
     </section>
     <section>
-      <h6>TMagP</h6>
+      <h6>TMA</h6>
       <nav>
         <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
         <div><a href="tmagp/characters.html" class="title">Characters</a></div>
@@ -74,16 +74,15 @@
         <section>
           <nav>
               <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
+              <div><a href="index.html" class="subtitle">Magnus Archives</a></div>
               <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
-          <h6>TMagP</h6>
+          <h6>TMA</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div><a href="tma/episodes.html" class="title">Episodes</a></div>
+              <div><a href="tma/characters.html" class="title">Characters</a></div>
           </nav>
         </section>
       </aside>
