--- a/tma/fears.html
+++ b/tma/fears.html
@@ -42,7 +42,7 @@
       </nav>
     </section>
     <section>
-      <h6>TMagP</h6>
+      <h6>TMA</h6>
       <nav>
         <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
         <div><a href="tmagp/characters.html" class="title">Characters</a></div>
@@ -79,7 +79,7 @@
           </nav>
         </section>
         <section>
-          <h6>TMagP</h6>
+          <h6>TMA</h6>
           <nav>
               <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
               <div><a href="tmagp/characters.html" class="title">Characters</a></div>
