--- a/tmagp/ep/001.html
+++ b/tmagp/ep/001.html
@@ -42,9 +42,9 @@
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+        <div><a href="../episodes.html" class="title">Episodes</a></div>
+        <div><a href="../characters.html" class="title">Characters</a></div>
+        <div><a href="002.html" class="subtitle">Next Episode</a></div>
       </nav>
     </section>
     <section class="legend">
@@ -99,9 +99,9 @@
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div><a href="../episodes.html" class="title">Episodes</a></div>
+              <div><a href="../characters.html" class="title">Characters</a></div>
+              <div><a href="002.html" class="subtitle">Next Episode</a></div>
           </nav>
         </section>
         <section class="legend">
@@ -142,7 +142,7 @@
         Technology (old web) -/- conspiracy (undetermined) [forum]</h4>
       </section>
       <section>
-        <div id="Incident">
+        <div id="1st-Incident">
           <h2>the INCIDENT</h2>
         </div>
       </section>
@@ -199,7 +199,7 @@
         </div>
       </section>
       <section class="cluster">
-        <div id="Incident-Summary">
+        <div id="1st-Incident-Summary">
           <h3 class="prompt">
             incident summarized:
           </h3>
@@ -209,7 +209,7 @@
         </div>
       </section>
       <section class="cluster">
-        <div id="Incident-Entity">
+        <div id="1st-Incident-Entity">
           <h3 class="prompt">
             entity influence:
           </h3>
@@ -219,7 +219,7 @@
         </div>
       </section>
       <section class="cluster">
-        <div id="Incident-Assessment">
+        <div id="1st-Incident-Assessment">
           <h3 class="prompt">
             o.i.a.r. assessment:
           </h3>
@@ -229,7 +229,104 @@
         </div>
       </section>
       <section class="cluster">
-        <div id="Incident-Significant">
+        <div id="1st-Incident-Significant">
+          <h3 class="prompt">
+            of significance:
+          </h3>
+          <p class="analysis">
+            Some things.
+          </p>
+        </div>
+      </section>
+      <section>
+        <div id="2nd-Incident">
+          <h2>the INCIDENT</h2>
+        </div>
+      </section>
+      <section class="cluster">
+        <div class="pair">
+          <h3 class="prompt">
+            case file:
+          </h3>
+          <p>
+            #9991231
+          </p>
+        </div>
+        <div class="pair">
+          <h3 class="prompt">
+            report subject:
+          </h3>
+          <p>
+            Somebody.
+          </p>
+        </div>
+        <div class="pair">
+          <h3 class="prompt">
+            reader:
+          </h3>
+          <p>
+            Somebody.
+          </p>
+        </div>
+      </section>
+      <section class="cluster">
+        <div class="pair">
+          <h3 class="prompt">
+            appearances:
+          </h3>
+          <p>
+            Somebody.
+          </p>
+        </div>
+        <div class="pair">
+          <h3 class="prompt">
+            locations:
+          </h3>
+          <p>
+            Somewhere.
+          </p>
+        </div>
+        <div class="pair">
+          <h3 class="prompt">
+            artifacts:
+          </h3>
+          <p>
+            Something.
+          </p>
+        </div>
+      </section>
+      <section class="cluster">
+        <div id="2nd-Incident-Summary">
+          <h3 class="prompt">
+            incident summarized:
+          </h3>
+          <p class="analysis">
+            Some things.
+          </p>
+        </div>
+      </section>
+      <section class="cluster">
+        <div id="2nd-Incident-Entity">
+          <h3 class="prompt">
+            entity influence:
+          </h3>
+          <p class="analysis">
+            Something.
+          </p>
+        </div>
+      </section>
+      <section class="cluster">
+        <div id="2nd-Incident-Assessment">
+          <h3 class="prompt">
+            o.i.a.r. assessment:
+          </h3>
+          <p class="analysis">
+            Some things.
+          </p>
+        </div>
+      </section>
+      <section class="cluster">
+        <div id="2nd-Incident-Significant">
           <h3 class="prompt">
             of significance:
           </h3>
