add titles and site favicon to all existing pages

--- a/tma/index.html
+++ b/tma/index.html
@@ -4,7 +4,7 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
-    <title>the magnus archives.</title>
+    <title>the magnus archives</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="../less/style.less">
