--- a/tmagp/character/oiar.html
+++ b/tmagp/character/oiar.html
@@ -4,6 +4,8 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
+    <title>office of incident assessment & response staff</title>
+    <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="../../less/style.less">
       <!-- LESS.js: lesscss.org -->
@@ -21,7 +23,7 @@
     </section>
 
     <section>
-      <h1>o.i.a.r. staff.</h1>
+      <h1>the o.i.a.r. staff.</h1>
     </section>
     
     <section class="page navbar toggle">
