--- a/tmagp/character/recurring.html
+++ b/tmagp/character/recurring.html
@@ -4,6 +4,8 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
+    <title>TMagP: recurring characters</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="../../less/style.less">
       <!-- LESS.js: lesscss.org -->
